--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -181,6 +181,81 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number of Unique Items</th>\n",
+       "      <th>Average Price</th>\n",
+       "      <th>Number of Purchases</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>179</td>\n",
+       "      <td>$3.05</td>\n",
+       "      <td>780</td>\n",
+       "      <td>$2,379.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Number of Unique Items Average Price Number of Purchases Total Revenue\n",
+       "0                     179         $3.05                 780     $2,379.77"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame to hold results\n",
+    "summary_table = pd.DataFrame({\n",
+    "    \n",
+    "                                \"Number of Unique Items\": item_count,\n",
+    "                                \"Total Revenue\": [total_purchase_value],\n",
+    "                                \"Number of Purchases\": [purchase_count],\n",
+    "                                \"Average Price\": [average_item_price]\n",
+    "})\n",
+    "\n",
+    "# Minor Data Munging\n",
+    "summary_table = summary_table.round(2)\n",
+    "summary_table[\"Average Price\"] = summary_table[\"Average Price\"].map(\"${:,.2f}\".format)\n",
+    "summary_table[\"Number of Purchases\"] = summary_table[\"Number of Purchases\"].map(\"{:,}\".format)\n",
+    "summary_table[\"Total Revenue\"] = summary_table[\"Total Revenue\"].map(\"${:,.2f}\".format)\n",
+    "summary_table = summary_table.loc[:, [\"Number of Unique Items\", \"Average Price\", \"Number of Purchases\", \"Total Revenue\"]]\n",
+    "\n",
+    "# Summary Table\n",
+    "summary_table"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
