add gender demographics

--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -256,6 +256,131 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "      <th>Avg Total Purchase per Person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>113</td>\n",
+       "      <td>$3.20</td>\n",
+       "      <td>$361.94</td>\n",
+       "      <td>$4.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>652</td>\n",
+       "      <td>$3.02</td>\n",
+       "      <td>$1,967.64</td>\n",
+       "      <td>$4.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>15</td>\n",
+       "      <td>$3.35</td>\n",
+       "      <td>$50.19</td>\n",
+       "      <td>$4.56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Purchase Count Average Purchase Price  \\\n",
+       "Gender                                                        \n",
+       "Female                           113                  $3.20   \n",
+       "Male                             652                  $3.02   \n",
+       "Other / Non-Disclosed             15                  $3.35   \n",
+       "\n",
+       "                      Total Purchase Value Avg Total Purchase per Person  \n",
+       "Gender                                                                    \n",
+       "Female                             $361.94                         $4.47  \n",
+       "Male                             $1,967.64                         $4.07  \n",
+       "Other / Non-Disclosed               $50.19                         $4.56  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the Number of Percentage by Gender\n",
+    "gender_demographics_total = player_demographics[\"Gender\"].value_counts()\n",
+    "gender_demographics_percent = gender_demographics_total / num_players\n",
+    "gender_demographics = pd.DataFrame({\n",
+    "    \n",
+    "                                    \"Total Count\": gender_demographics_total,\n",
+    "                                    \"Percentage of Players\": gender_demographics_percent\n",
+    "})\n",
+    "\n",
+    "# Minor Data Cleaning\n",
+    "gender_demographics[\"Percentage of Players\"] = gender_demographics[\"Percentage of Players\"].map(\"{:,.2%}\".format)\n",
+    "\n",
+    "gender_demographics\n",
+    "\n",
+    "# Run Calculations\n",
+    "gender_purchase_total = purchase_data.groupby([\"Gender\"]).sum()[\"Price\"].rename(\"Total Purchase Value\")\n",
+    "gender_average = purchase_data.groupby([\"Gender\"]).mean()[\"Price\"].rename(\"Average Purchase Price\")\n",
+    "gender_counts = purchase_data.groupby([\"Gender\"]).count()[\"Price\"].rename(\"Purchase Count\")\n",
+    "\n",
+    "# Calculate Normalized Purchasing\n",
+    "normalized_total = gender_purchase_total / gender_demographics[\"Total Count\"]\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "gender_data = pd.DataFrame({\n",
+    "    \n",
+    "                          \"Purchase Count\": gender_counts, \n",
+    "                          \"Average Purchase Price\": gender_average,\n",
+    "                          \"Total Purchase Value\": gender_purchase_total,\n",
+    "                          \"Normalized Totals\": normalized_total\n",
+    "    \n",
+    "                         })\n",
+    "\n",
+    "# Cleaning process\n",
+    "gender_data[\"Average Purchase Price\"] = gender_data[\"Average Purchase Price\"].map(\"${:,.2f}\".format)\n",
+    "gender_data[\"Total Purchase Value\"] = gender_data[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "gender_data[\"Purchase Count\"] = gender_data[\"Purchase Count\"].map(\"{:,}\".format)\n",
+    "gender_data[\"Avg Total Purchase per Person\"] = gender_data[\"Normalized Totals\"].map(\"${:,.2f}\".format)\n",
+    "gender_data[[\"Purchase Count\", \"Average Purchase Price\", \"Total Purchase Value\", \"Avg Total Purchase per Person\"]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
