--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -256,7 +256,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Male</th>\n",
+       "      <td>484</td>\n",
+       "      <td>84.03%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Female</th>\n",
+       "      <td>81</td>\n",
+       "      <td>14.06%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other / Non-Disclosed</th>\n",
+       "      <td>11</td>\n",
+       "      <td>1.91%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Total Count Percentage of Players\n",
+       "Male                           484                84.03%\n",
+       "Female                          81                14.06%\n",
+       "Other / Non-Disclosed           11                 1.91%"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the Number of Percentage by Gender\n",
+    "gender_demographics_total = player_demographics[\"Gender\"].value_counts()\n",
+    "gender_demographics_percent = gender_demographics_total / num_players\n",
+    "gender_demographics = pd.DataFrame({\n",
+    "    \n",
+    "                                    \"Total Count\": gender_demographics_total,\n",
+    "                                    \"Percentage of Players\": gender_demographics_percent\n",
+    "})\n",
+    "\n",
+    "# Minor Data Cleaning\n",
+    "gender_demographics[\"Percentage of Players\"] = gender_demographics[\"Percentage of Players\"].map(\"{:,.2%}\".format)\n",
+    "\n",
+    "gender_demographics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -333,26 +411,12 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate the Number of Percentage by Gender\n",
-    "gender_demographics_total = player_demographics[\"Gender\"].value_counts()\n",
-    "gender_demographics_percent = gender_demographics_total / num_players\n",
-    "gender_demographics = pd.DataFrame({\n",
-    "    \n",
-    "                                    \"Total Count\": gender_demographics_total,\n",
-    "                                    \"Percentage of Players\": gender_demographics_percent\n",
-    "})\n",
-    "\n",
-    "# Minor Data Cleaning\n",
-    "gender_demographics[\"Percentage of Players\"] = gender_demographics[\"Percentage of Players\"].map(\"{:,.2%}\".format)\n",
-    "\n",
-    "gender_demographics\n",
-    "\n",
     "# Run Calculations\n",
     "gender_purchase_total = purchase_data.groupby([\"Gender\"]).sum()[\"Price\"].rename(\"Total Purchase Value\")\n",
     "gender_average = purchase_data.groupby([\"Gender\"]).mean()[\"Price\"].rename(\"Average Purchase Price\")\n",
