--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -825,6 +825,144 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>$13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>$12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>$9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <th>Persuasion</th>\n",
+       "      <td>$9</td>\n",
+       "      <td>$3.22</td>\n",
+       "      <td>$28.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>$9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>$31.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     Purchase Count  \\\n",
+       "Item ID Item Name                                                     \n",
+       "92      Final Critic                                            $13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm            $12   \n",
+       "145     Fiery Glass Crusader                                     $9   \n",
+       "132     Persuasion                                               $9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                $9   \n",
+       "\n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "132     Persuasion                                        $3.22   \n",
+       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "92      Final Critic                                               $59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "132     Persuasion                                                 $28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Most popular items\n",
+    "item_data = purchase_data[[\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "\n",
+    "# Perform calculation\n",
+    "total_item_purchase = item_data.groupby([\"Item ID\", \"Item Name\"]).sum()[\"Price\"].rename(\"Total Purchase Price\")\n",
+    "average_item_purchase = item_data.groupby([\"Item ID\", \"Item Name\"]).mean()[\"Price\"]\n",
+    "item_count = item_data.groupby([\"Item ID\", \"Item Name\"]).count()[\"Price\"].rename(\"Purchase Count\")\n",
+    "\n",
+    "# Create DF\n",
+    "item_data_pd = pd.DataFrame({\n",
+    "    \n",
+    "                            \"Total Purchase Value\": total_item_purchase,\n",
+    "                            \"Item Price\": average_item_purchase,\n",
+    "                            \"Purchase Count\": item_count\n",
+    "})\n",
+    "\n",
+    "# Sort Values\n",
+    "item_data_count_sorted = item_data_pd.sort_values(\"Purchase Count\", ascending=False)\n",
+    "\n",
+    "# Cleaning\n",
+    "item_data_count_sorted[\"Item Price\"] = item_data_count_sorted[\"Item Price\"].map(\"${:,.2f}\".format)\n",
+    "item_data_count_sorted[\"Purchase Count\"] = item_data_count_sorted[\"Purchase Count\"].map(\"${:,}\".format)\n",
+    "item_data_count_sorted[\"Total Purchase Value\"] = item_data_count_sorted[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "item_data_count_sorted[[\"Purchase Count\", \"Item Price\", \"Total Purchase Value\"]].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
