--- a/HeroesOfPymoli/main.ipynb
+++ b/HeroesOfPymoli/main.ipynb
@@ -1017,7 +1017,7 @@
     "\n",
     "# Cleaning\n",
     "item_data_count_sorted[\"Item Price\"] = item_data_count_sorted[\"Item Price\"].map(\"${:,.2f}\".format)\n",
-    "item_data_count_sorted[\"Purchase Count\"] = item_data_count_sorted[\"Purchase Count\"].map(\"${:,}\".format)\n",
+    "item_data_count_sorted[\"Purchase Count\"] = item_data_count_sorted[\"Purchase Count\"].map(\"{:,}\".format)\n",
     "item_data_count_sorted[\"Total Purchase Value\"] = item_data_count_sorted[\"Total Purchase Value\"].map(\"${:,.2f}\".format)\n",
     "\n",
     "item_data_count_sorted[[\"Purchase Count\", \"Item Price\", \"Total Purchase Value\"]].head()"
