add District Summary

--- a/PyCitySchools/main.ipynb
+++ b/PyCitySchools/main.ipynb
@@ -253,8 +253,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## District Summary"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -279,38 +286,81 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>15</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428.00</td>\n",
+       "      <td>78.985371</td>\n",
+       "      <td>81.87784</td>\n",
+       "      <td>74.980853</td>\n",
+       "      <td>85.805463</td>\n",
+       "      <td>65.172326</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools\n",
-       "0             15"
+       "   Total Schools Total Students    Total Budget  Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428.00           78.985371   \n",
+       "\n",
+       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
+       "0               81.87784       74.980853          85.805463          65.172326  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Total number of schools\n",
-    "total_schools = school_data.count()[0]\n",
+    "# District summary\n",
+    "total_schools = school_data[\"School ID\"].count()\n",
+    "total_students = student_data[\"Student ID\"].count()\n",
+    "total_budget = school_data[\"budget\"].sum()\n",
+    "avrg_math_score = student_data[\"math_score\"].mean()\n",
+    "avrg_reading_score = student_data[\"reading_score\"].mean()\n",
     "\n",
+    "math_passing_count = student_data[(student_data[\"math_score\"] >= 70)].count()[1] \n",
+    "math_passing_per = (math_passing_count / total_students) * 100\n",
+    "\n",
+    "reading_passing_count = student_data[(student_data[\"reading_score\"] >= 70)].count()[1]\n",
+    "reading_passing_per = (reading_passing_count / total_students) * 100\n",
+    "\n",
+    "total_passing_count = student_data.loc[(student_data[\"math_score\"] >= 70) & (student_data[\"reading_score\"] >= 70)].count()[0]\n",
+    "total_passing_per = (total_passing_count / total_students) * 100\n",
     "\n",
     "# Formatting\n",
-    "pd.DataFrame({\n",
+    "district_summary = pd.DataFrame({\n",
     "    \n",
-    "                \"Total Schools\": [total_schools]\n",
+    "                \"Total Schools\": [total_schools],\n",
+    "                \"Total Students\": [total_students],\n",
+    "                \"Total Budget\": [total_budget],\n",
+    "                \"Average Math Score\": [avrg_math_score],\n",
+    "                \"Average Reading Score\": [avrg_reading_score],\n",
+    "                \"% Passing Math\": [math_passing_per],\n",
+    "                \"% Passing Reading\": [reading_passing_per],\n",
+    "                \"% Overall Passing\": [total_passing_per]\n",
     "    \n",
-    "})\n"
+    "})\n",
+    "\n",
+    "# Data munging\n",
+    "district_summary[\"Total Students\"] = district_summary[\"Total Students\"].map(\"{:,}\".format)\n",
+    "district_summary[\"Total Budget\"] = district_summary[\"Total Budget\"].map(\"${:,.2f}\".format)\n",
+    "\n",
+    "# Display\n",
+    "district_summary"
    ]
   },
   {
